[gd_scene load_steps=2 format=3 uid="uid://cxemiwbtvyl37"]

[ext_resource type="Script" path="res://settings.gd" id="1_6h6a8"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6h6a8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Mute"

[node name="FullScreen" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Full Screen"

[node name="Resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 3
item_count = 6
popup/item_0/text = "2560 x 1440"
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "1600x900"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3
popup/item_4/text = "800x600"
popup/item_4/id = 4
popup/item_5/text = "600x400"
popup/item_5/id = 5

[node name="Return" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back To Main Menu"

[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/FullScreen" to="." method="_on_mute_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/FullScreen" to="." method="_on_full_screen_2_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
